--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,5 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-8">
+  <!-- Facebook Pixel Code -->
+<script>
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+  n.queue=[];t=b.createElement(e);t.async=!0;
+  t.src=v;s=b.getElementsByTagName(e)[0];
+  s.parentNode.insertBefore(t,s)}(window, document,'script',
+  'https://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '189785289727870');
+  fbq('track', 'PageView');
+  </script>
+  <noscript><img height="1" width="1" style="display:none"
+  src="https://www.facebook.com/tr?id=189785289727870&ev=PageView&noscript=1"
+  /></noscript>
+  <!-- End Facebook Pixel Code -->
   <head>
     <!-- Latest compiled and minified CSS -->
     <link
@@ -8,6 +25,7 @@
       integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu"
       crossorigin="anonymous"
     />
+    
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
@@ -283,10 +301,10 @@
             </div>
             <div class="col-12 text-center pb-3 mb-3">
               <h5 class="servicos color-white">
-                Açaí Expresso . YogoFrozen <br />
-                Sorvete Artesanal . Cremes <br />
-                . Tropzz Shakes . Paletas <br />
-                Paletas . Picolés . Adicionais
+                . Açaí Expresso . YogoFrozen . <br />
+                . Sorvete Artesanal .Cremes . <br />
+                . Tropzz Shakes .Picolés . <br />
+                . Paletas . Adicionais .
               </h5>
             </div>
             <div class="container d-flex justify-content-center">
@@ -352,7 +370,7 @@
                 <img src="/img/ilha-meninas.png" alt="" width="70%" />
               </div>
               <div class="d-flex col-12 align-items-center">
-                <div class="col-8 col-md-6 chama text-right">
+                <div class="col-7 col-md-6 chama text-right text-sm-end">
                   <h5 class="chama-no">Chama no</h5>
                 </div>
                 <div class="col-4 col-md-6">
